# dsba-ads2020-hw1

./: CMakeLists.txt  README.md  main.cpp  processor.ipynb
data/: intersection.csv  overview.csv
report/: Report.tex
results/: experiment_0.csv  experiment_1.csv  experiment_2.csv  experiment_3.csv  experiment_3_move.csv  experiment_4.csv  experiment_5.csv  experiment_6.csv  overview_opti.csv
src/: Experimentator.cpp  Experimentator.h  Multiplicator.cpp  Multiplicator.h  MultiplicatorV.cpp  MultiplicatorV.h  Number.cpp  Number.h
src2/: Experimentator.cpp  Experimentator.h  Multiplicator.cpp  Multiplicator.h  MultiplicatorV.cpp  MultiplicatorV.h  Number.cpp  Number.h  NumberHolder.cpp
